--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto</title>
+    <title>Proyecto Netlify</title>
 </head>
 <body>
     <div id="root"></div>
